# nwhacks-2026

./: .env.example  .gitignore  EXECUTION_STEPS.md  README.md  architecture.md  context.md  design-decisions.md  feature-fixtrace-ask.md  features.md  open-questions.md  pyproject.toml  scope.md  setup.py  team-split.md  tech-stack.md
demo/: demo.md  docker-compose.yml
fixtrace/: __init__.py  ai.py  capture.py  cli.py  markdown.py  parser.py  session.py
fixtrace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
