[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtrace"
version = "0.1.0"
description = "Passively capture terminal troubleshooting sessions and auto-generate documentation"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fixtrace = "fixtrace.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
